# Visualizer

./: Cargo.toml  README.md  index.html  main.cpp  package-lock.json  package.json  sort_visualizer.cpp  tsconfig.json  vite.config.ts
my-visualizer/: package-lock.json  package.json
my-visualizer/src/: App.js
my-visualizer/src/components/: ControlPanel.js  Visualizer.js
my-visualizer/src/utils/: algorithms.js
my-visualizer/src/visualizations/: SortingVisualizer.js
src/: App.tsx  lib.rs  main.rs
src/components/: Message.tsx
src/css/: InputInterface.module.css
src/pages/: LandingPage.tsx
src/visualizations/: BubbleSortVisualizer.tsx  InsertionSortVisualizer.tsx  SelectionSortVisualizer.tsx
templates/: example.html  index.html
tmp/: a.out  pixel  sort_visualizer  tmp.cpp
visualizer/: package-lock.json  package.json  vite.config.ts
visualizer/src/: App.tsx  main.tsx
visualizer/src/components/: Visualizer.tsx
visualizer/src/css/: Visualizer.module.css
visualizer/src/pages/: BubbleSort.tsx  LandingPage.tsx
visualizer/src/visualizations/: BubbleSortVisualizer.tsx  BubbleSortingVisualizer.tsx
